--- a/assets/sass/_configuration.sass
+++ b/assets/sass/_configuration.sass
@@ -1,7 +1,47 @@
-$heading-font-family: "Helvetica Neue", "Helvetica", "Arial", sans-serif
+// Colors
+
+$color-background: #DDC4F7
+$color-accent: #BC8AF0
+
+// Typography
+
+$heading-font-family: "Mier B", "Helvetica Neue", "Helvetica", "Arial", sans-serif
 $body-font-family: $heading-font-family
+
+$h1-size-desktop: pxToRem(82)
+$h1-line-height-desktop: 1.1
+
+$h2-size-desktop: pxToRem(70)
+$h2-line-height-desktop: 1.1
+
+$h3-size-desktop: pxToRem(49)
+$h3-line-height-desktop: 1.1
+$h3-weight: normal
+
+$h4-size-desktop: pxToRem(35)
+$h4-line-height-desktop: 1.1
+$h4-weight: bold
+
+$h5-size-desktop: pxToRem(24)
+$h5-line-height-desktop: 1.3
+$h5-text-transform: none
+
+$h6-text-transform: none
+
+$lead-sidebar-size-desktop: pxToRem(33) 
+$lead-sidebar-line-height-desktop: 1.2
+
+$body-size-desktop: pxToRem(22)
+$body-line-height-desktop: 1.5
+
+$meta-size-desktop: pxToRem(19)
+$meta-line-height-desktop: 1.1
+
+// Design System
 
 $header-background: none
 $header-border-bottom-width: 0
+
 $hero-background-color: none
+
 $footer-background-color: none
