--- a/assets/sass/_fonts.sass
+++ b/assets/sass/_fonts.sass
@@ -1,1 +1,2 @@
-// @include font-face("Font name", font-file-in-fonts-without-extensions)
+@include font-face("Mier B", MierB-Regular, $exts: (woff woff2))
+@include font-face("Mier B", MierB-ExtraBold, bold, $exts: (woff woff2))
