--- a/assets/sass/design-system/logo.sass
+++ b/assets/sass/design-system/logo.sass
@@ -48,8 +48,8 @@
                 transform: translate(0, 0) !important
         img
             opacity: 0
-    &:not(:hover)
-        animation: vibration .25s cubic-bezier(0.075, 0.820, 0.065, 1.000)
+    // &:not(:hover)
+    //     animation: vibration .25s cubic-bezier(0.075, 0.820, 0.065, 1.000)
 
 
 // .logo
