--- a/assets/sass/_configuration.sass
+++ b/assets/sass/_configuration.sass
@@ -2,6 +2,7 @@
 
 $color-background: #DDC4F7
 $color-accent: #BC8AF0
+$color-border: var(--color-text)
 
 // Typography
 
@@ -25,6 +26,7 @@ $h4-weight: bold
 $h5-size-desktop: pxToRem(24)
 $h5-line-height-desktop: 1.3
 $h5-text-transform: none
+$h5-weight: bold
 
 $h6-text-transform: none
 
@@ -41,7 +43,9 @@ $meta-line-height-desktop: 1.1
 
 $header-background: none
 $header-border-bottom-width: 0
-
+$header-logo-height: pxToRem(22)
 $hero-background-color: none
 
 $footer-background-color: none
+
+$border-width: 3px
