--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -4,6 +4,7 @@
 @import "_theme/hugo-osuny"
 
 @import "design-system/logo"
+@import "design-system/header"
 @import "design-system/hero"
 
 @import "section/home"
