--- a/assets/sass/_configuration.sass
+++ b/assets/sass/_configuration.sass
@@ -1,6 +1,7 @@
 // Colors
 
-$color-background: #DDC4F7
+$color-background: white
+$color-background-alt: #DDC4F7
 $color-accent: #BC8AF0
 $color-border: var(--color-text)
 
@@ -41,11 +42,14 @@ $meta-line-height-desktop: 1.1
 
 // Design System
 
-$header-background: none
+$header-background: $color-background-alt
+$header-sticky-background: $color-background-alt
 $header-border-bottom-width: 0
 $header-logo-height: pxToRem(22)
-$hero-background-color: none
 
-$footer-background-color: none
+$hero-background-color: $color-background-alt
+
+$footer-logo-height: pxToRem(33)
+$footer-background-color: $color-background-alt
 
 $border-width: 3px
