--- a/assets/sass/design-system/hero.sass
+++ b/assets/sass/design-system/hero.sass
@@ -4,3 +4,7 @@
         display: flex
         align-items: center
         justify-content: center
+.projects__section, .posts__section
+    .hero
+        h1
+            @include h2
