--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -5,6 +5,14 @@
 
 @import "design-system/logo"
 @import "design-system/header"
+@import "design-system/footer"
 @import "design-system/hero"
+@import "design-system/toc"
+
+@import "blocks/title"
 
 @import "section/home"
+@import "section/categories"
+@import "section/persons"
+@import "section/projects"
+@import "section/posts"
