--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -2,6 +2,7 @@
 @import "_fonts"
 @import "_configuration"
 @import "_theme/hugo-osuny"
+@import "osuny-masonry"
 
 @import "design-system/logo"
 @import "design-system/header"
