--- a/assets/sass/section/projects.sass
+++ b/assets/sass/section/projects.sass
@@ -33,3 +33,6 @@
                 img
                     position: relative
                     z-index: 2
+            .year
+                @include h1
+                font-weight: normal
