mobile, config and typo fixes

--- a/assets/sass/_configuration.sass
+++ b/assets/sass/_configuration.sass
@@ -13,6 +13,7 @@ $body-font-family: $heading-font-family
 $h1-size-desktop: pxToRem(82)
 $h1-line-height-desktop: 1.1
 
+$h2-size: pxToRem(28)
 $h2-size-desktop: pxToRem(70)
 $h2-line-height-desktop: 1.1
 
@@ -20,6 +21,7 @@ $h3-size-desktop: pxToRem(49)
 $h3-line-height-desktop: 1.1
 $h3-weight: normal
 
+$h4-size: pxToRem(24)
 $h4-size-desktop: pxToRem(35)
 $h4-line-height-desktop: 1.1
 $h4-weight: bold
