--- a/assets/sass/section/categories.sass
+++ b/assets/sass/section/categories.sass
@@ -7,7 +7,8 @@
     &:hover
         background: var(--color-background)
 
-.taxonomies-single
+.taxonomies-single,
+.project-categories
     li
         a
             @extend .categorie-item
