--- a/assets/sass/design-system/hero.sass
+++ b/assets/sass/design-system/hero.sass
@@ -1,9 +1,12 @@
 .hero
     text-align: center
-    .content
-        display: flex
-        align-items: center
-        justify-content: center
+    @include media-breakpoint-up(desktop)
+        .content
+            display: flex
+            align-items: center
+            justify-content: center
+        .has-lead
+            max-width: columns(10)
 .projects__section, .posts__section
     .hero
         h1
