--- a/assets/sass/section/home.sass
+++ b/assets/sass/section/home.sass
@@ -14,7 +14,38 @@
                     padding-right: $spacing-3
                     .avatar
                         mix-blend-mode: multiply
-        .block-definitions
+    .block-definitions
+        .definitions
+            @include media-breakpoint-up(desktop)
+                width: columns(8)
+            details
+                summary
+                    @include h3
+                    padding-top: $spacing-3
+                    padding-bottom: $spacing-3
+                    &::after
+                        content: '+'
+                        font-family: inherit
+                p
+                    padding-left: 0
+                    margin-left: 0
+                @include media-breakpoint-up(desktop)
+                    &:hover 
+                        summary::after
+                            transform: scale(0.9)
+                &[open]
+                    summary::after
+                        transform: rotate(135deg)
+                    &:hover
+                        summary::after
+                            transform: rotate(135deg)
+                            @include media-breakpoint-up(desktop)
+                                transform: scale(0.9) rotate(135deg)
+                @include media-breakpoint-down(desktop)
+                    &:not([open]):hover 
+                        summary::after
+                            transform: none
+        @include media-breakpoint-up(desktop)
             .block-content
                 display: flex
                 gap: var(--grid-gutter)
@@ -22,25 +53,3 @@
                     width: columns(4)
                     .block-title
                         @include h5
-                .definitions
-                    width: columns(8)
-                    details
-                        summary
-                            @include h3
-                            padding-top: $spacing-3
-                            padding-bottom: $spacing-3
-                            &::after
-                                content: '+'
-                                font-family: inherit
-                        p
-                            padding-left: 0
-                            margin-left: 0
-                        &:hover 
-                            summary::after
-                                transform: scale(0.9)
-                        &[open]
-                            summary::after
-                                transform: rotate(135deg)
-                            &:hover
-                                summary::after
-                                    transform: scale(0.9) rotate(135deg)
