--- a/assets/sass/section/home.sass
+++ b/assets/sass/section/home.sass
@@ -32,8 +32,8 @@
                     width: columns(3)
                     padding-left: $spacing-3
                     padding-right: $spacing-3
-                    .avatar
-                        mix-blend-mode: multiply
+                    // .avatar
+                    //     mix-blend-mode: multiply
         .block-projects--grid
             .container
                 padding-left: 0
