--- a/assets/sass/_configuration.sass
+++ b/assets/sass/_configuration.sass
@@ -37,6 +37,10 @@ $h6-text-transform: none
 $lead-sidebar-size-desktop: pxToRem(33) 
 $lead-sidebar-line-height-desktop: 1.2
 
+$lead-size-desktop: pxToRem(33)
+$lead-size: pxToRem(24)
+$lead-line-height-desktop: 1.2
+
 $body-size-desktop: pxToRem(22)
 $body-line-height-desktop: 1.5
 
