--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -11,6 +11,7 @@
 @import "design-system/toc"
 
 @import "blocks/title"
+@import "blocks/pagination"
 
 @import "section/home"
 @import "section/categories"
