--- a/assets/sass/section/posts.sass
+++ b/assets/sass/section/posts.sass
@@ -14,6 +14,11 @@
     .post-sidebar
         padding-bottom: calc(#{$spacing-6} * 2)
 
+.posts__section
+    .posts--list
+        article
+            margin-bottom: $spacing-3
+
 // list appareance
 .posts--list,
 .block-posts--list
