fix taxonomies in posts hero

--- a/assets/sass/section/posts.sass
+++ b/assets/sass/section/posts.sass
@@ -1,7 +1,7 @@
 .posts__page
     .hero
         .posts-taxonomies
-            width: 100%
+            &,
             .taxonomy-children
                 justify-content: center
                 width: 100%
