--- a/assets/sass/design-system/footer.sass
+++ b/assets/sass/design-system/footer.sass
@@ -6,18 +6,41 @@ footer#document-footer
         justify-content: center
         margin-bottom: pxToRem(-18)
         + .container
-            padding-top: 0
-            display: block
+            display: flex
+            padding-top: $spacing-6
     .footer-legals
-        display: flex
-        align-items: center
-        gap: $spacing-3
-        justify-content: space-between
-        ul
-            display: inline
-            li
+        order: 2
+        @media screen and (min-width: 1600px)
+            align-items: center
+            display: flex
+            gap: space(2)
+            justify-content: space-between
+            ul
                 display: inline
-            li + li
-                margin-top: 0
+                li
+                    display: inline
+                li + li
+                    margin-top: 0
+                    margin-left: space()
         .footer-credit
-            margin-top: 0
+            margin-top: $spacing-2
+            @media screen and (min-width: 1600px)
+                margin-top: 0
+        @media screen and (max-width: 1600px)
+            ul li
+                text-align: right
+    .footer-social
+        ul
+            @media screen and (max-width: 1600px)
+                li
+                    text-align: left
+            @media screen and (min-width: 1600px)
+                display: flex
+                flex-wrap: wrap
+                align-items: baseline
+                justify-content: flex-end
+                li
+                    &:not(:first-child)
+                        margin-left: space()
+                        &::before
+                            content: '|'
