--- a/assets/sass/_configuration.sass
+++ b/assets/sass/_configuration.sass
@@ -55,8 +55,11 @@ $header-border-bottom-width: 0
 $header-logo-height: pxToRem(22)
 
 $hero-background-color: $color-background-alt
+$hero-height-desktop: 200px
 
 $footer-logo-height: pxToRem(33)
 $footer-background-color: $color-background-alt
 
 $border-width: 3px
+
+$heading-margin-bottom-desktop: pxToRem(56)
