--- a/assets/sass/section/categories.sass
+++ b/assets/sass/section/categories.sass
@@ -6,7 +6,7 @@
     text-decoration: none
     transition: 0.3s
     &:hover
-        background-color: $color-text
+        background-color: var(--color-text)
         color: var(--color-background)
 
 .taxonomies-single,
