--- a/assets/sass/section/home.sass
+++ b/assets/sass/section/home.sass
@@ -3,16 +3,18 @@
         padding-bottom: var(--block-space-y)
         margin-bottom: 0
         h1
-            em:not(:first-child)                    
+            em:not(:first-child)
                 display: block
                 font-weight: normal
                 font-style: normal
+            + p
+                margin-top: $spacing-5
         .has-lead
             position: relative
             &::after
                 content: ''
                 display: block
-                background-color: $color-text
+                background-color: var(--color-text)
                 height: 3px
                 margin-left: auto
                 margin-right: auto
