--- a/assets/sass/section/posts.sass
+++ b/assets/sass/section/posts.sass
@@ -10,7 +10,7 @@
             > span:first-child
                 font-weight: bold
     .document-content::after
-        background-color: $color-background-alt
+        background-color: var(--color-background-alt)
     .post-sidebar
         padding-bottom: calc(#{$spacing-6} * 2)
 
@@ -41,11 +41,17 @@
 .posts--list
     article:hover
         *
-            color: $color-accent
+            color: var(--color-accent)
+
 .block-posts--list
+    time
+        color: var(--color-text)
     article:hover
         .post-content a
-            color: $color-accent
+            color: var(--color-accent)
+    @include in-page-without-sidebar
+        article .post-meta time
+            margin-top: $spacing-3
 
 // block title
 .block-posts
