--- a/assets/sass/design-system/hero.sass
+++ b/assets/sass/design-system/hero.sass
@@ -7,6 +7,9 @@
             justify-content: center
         .has-lead
             max-width: columns(10)
+        .taxonomies-single.without-label
+            margin-top: 0
+            margin-bottom: 0
 
 .projects__section, .posts__section
     .hero
