--- a/assets/sass/design-system/hero.sass
+++ b/assets/sass/design-system/hero.sass
@@ -7,10 +7,12 @@
             justify-content: center
         .has-lead
             max-width: columns(10)
+    .taxonomies-single.without-label
+        margin-bottom: 0
+    @include media-breakpoint-down(desktop)
         .taxonomies-single.without-label
-            margin-top: 0
-            margin-bottom: 0
-
+            li
+                display: inline-block
 .projects__section, .posts__section
     .hero
         h1
