--- a/assets/sass/section/projects.sass
+++ b/assets/sass/section/projects.sass
@@ -36,6 +36,8 @@
             .year
                 @include h1
                 font-weight: normal
+        .taxonomies-single.without-label
+            margin-top: 0
     @include media-breakpoint-up(desktop)
         .hero
             figure
