--- a/assets/sass/section/categories.sass
+++ b/assets/sass/section/categories.sass
@@ -42,3 +42,15 @@
                     a
                         @include body-text
                         @extend .categorie-item
+            @include media-breakpoint-down(desktop)
+                overflow: auto
+                padding-bottom: $spacing-1
+                margin-left: var(--grid-gutter-negative)
+                margin-right: var(--grid-gutter-negative)
+                padding-left: var(--grid-gutter)
+                padding-right: var(--grid-gutter)
+                ul
+                    flex-wrap: nowrap
+                    li
+                        a
+                            white-space: nowrap
