--- a/assets/sass/design-system/logo.sass
+++ b/assets/sass/design-system/logo.sass
@@ -1,15 +1,8 @@
-@keyframes vibration
-    0%, 10%, 20%, 30%, 50%, 80%
-        transform: translateY(-2%)
-    5%, 15%, 25%, 35%, 65%, 90%
-        transform: translateY(2%)
-    100%
-        transform: translateY(0)
-
 .logo
     position: relative
     img
         display: block
+        opacity: 0
     svg
         position: absolute
         top: 50%
@@ -18,110 +11,61 @@
         right: 0
         width: 100%
         height: auto
-        opacity: 0
-        transition-delay: 0s
         path
-            --translate-y: 0
-            // transition: all .1s cubic-bezier(0.680, -1.550, 0.265, 2.150)
-            // transition: all .5s
-            transform: translateY(var(--translate-y))
-            &:nth-child(2)
-                --translate-y: 15%
-            &:nth-child(3)
-                --translate-y: -15%
-            &:nth-child(4),
-            &:nth-child(9),
-                --translate-y: 15%
-            &:nth-child(5),
-            &:nth-child(10),
-                --translate-y: -15%
-            &:nth-child(6)
-                --translate-y: 25%
-            &:nth-child(8)
-                --translate-y: -25%
-            &:nth-child(12)
-                --translate-y: 15%
-            &:nth-child(13)
-                --translate-y: -15%
+            --translate-y: 0%
+            &:nth-child(3n)
+                --translate-y: 35%
+            &:nth-child(3n + 1)
+                --translate-y: -35%
+
     &.is-animated
-        $delay: 0.05
+        $delay: 0.03
+        img
+            opacity: 0
         svg
-            opacity: 1
-            transition-delay: 0s
             path
-                // animation: translateY 0.3s forwards cubic-bezier(0.680, -1.550, 0.265, 2.150)
-                // cubic-bezier(0.46,0.03,0.52,0.96)
-                animation: translateY 1.5s forwards cubic-bezier(0.46,0.03,0.52,0.96)
-                &:nth-child(4), &:nth-child(5)
-                    animation-delay: #{$delay}s
-                &:nth-child(6), &:nth-child(8)
-                    animation-delay: #{$delay*2}s
-                &:nth-child(9), &:nth-child(10)
-                    animation-delay: #{$delay*3}s
-                &:nth-child(12), &:nth-child(13)
-                    animation-delay: #{$delay*4}s
+                animation: translateY 0.7s forwards cubic-bezier(0.46,0.03,0.52,0.96)
+                @for $i from 1 through 8
+                    &:nth-child(8n + #{$i})
+                        animation-delay: #{$delay * $i}s
+
         &.reversed
             svg
                 path
-                    &:nth-child(42), &:nth-child(3)
-                        animation-delay: #{$delay*4}s
-                    &:nth-child(4), &:nth-child(5)
-                        animation-delay: #{$delay*3}s
-                    &:nth-child(6), &:nth-child(8)
-                        animation-delay: #{$delay*2}s
-                    &:nth-child(9), &:nth-child(10)
-                        animation-delay: #{$delay}s
-                    &:nth-child(12), &:nth-child(13)
-                        animation-delay: 0s
-        img
-            opacity: 0
+                    @for $i from 1 through 8
+                        &:nth-child(8n + #{$i})
+                            animation-delay: #{$delay * (8 - $i)}s
+        //             &:nth-child(42), &:nth-child(3)
+        //                 animation-delay: #{$delay*4}s
+        //             &:nth-child(4), &:nth-child(5)
+        //                 animation-delay: #{$delay*3}s
+        //             &:nth-child(6), &:nth-child(8)
+        //                 animation-delay: #{$delay*2}s
+        //             &:nth-child(9), &:nth-child(10)
+        //                 animation-delay: #{$delay}s
+        //             &:nth-child(12), &:nth-child(13)
+        //                 animation-delay: 0s
+        // img
+        //     opacity: 0
     // &:not(:hover)
     //     animation: vibration .25s cubic-bezier(0.075, 0.820, 0.065, 1.000)
 
+// @keyframes translateY
+//     0%
+//         transform: translateY(0)
+//     15%
+//         transform: translateY(calc(var(--translate-y)))
+//     35%
+//         transform: translateY(calc(var(--translate-y) * -0.2))
+//     55%
+//         transform: translateY(calc(var(--translate-y) * 0.2))
+//     100%
+//         transform: translateY(0)
+
 @keyframes translateY
     0%
-        transform: translateY(var(--translate-y))
-    // 15%
-    //     transform: translateY(calc(var(--translate-y) * 0.5))
-    // 30%
-    //     transform: translateY(calc(var(--translate-y) * 0.4))
-    15%
-        transform: translateY(calc(var(--translate-y) * -0.3))
-    35%
-        transform: translateY(calc(var(--translate-y) * 0.4))
-    55%
-        transform: translateY(calc(var(--translate-y) * 0.2))
+        transform: translateY(0)
+    50%
+        transform: translateY(calc(var(--translate-y)))
     100%
-        transform: translateY(var(--translate-y))
-
-// .logo
-//     svg
-//         path
-//             transition: all .1s cubic-bezier(0.980, -1.550, 0.265, 2.150)
-//             &:nth-child(2)
-//                 transform: translate(1%, 15%)
-//             &:nth-child(3)
-//                 transform: translate(-1%, -15%)
-//             &:nth-child(4),
-//             &:nth-child(9),
-//                 transform: translate(1%, 15%)
-//             &:nth-child(5),
-//             &:nth-child(10),
-//                 transform: translate(-1%, -15%)
-//             &:nth-child(6)
-//                 transform: translate(1%, 25%)
-//             &:nth-child(8)
-//                 transform: translate(-1%, -25%)
-//             &:nth-child(12)
-//                 transform: translate(1%, 15%)
-//             &:nth-child(13)
-//                 transform: translate(-1%, -15%)
-//     &:hover
-//         svg
-//             path
-//                 transform: translate(0, 0) !important
-//                 // &:nth-child(even)
-//                 //     transform: translate(1%, 0) !important
-//                 // &:nth-child(odd)
-//                 //     transform: translate(-1%, 0) !important
-
+        transform: translateY(0)
